testsuite/tests/safeHaskell/safeLanguage/SafeLang10.stderr
[1 of 4] Compiling SafeLang10_A     ( SafeLang10_A.hs, SafeLang10_A.o )
[2 of 4] Compiling SafeLang10_B     ( SafeLang10_B.hs, SafeLang10_B.o )
[3 of 4] Compiling Main             ( SafeLang10.hs, SafeLang10.o )

SafeLang10.hs:9:13: error:
    • Unsafe overlapping instances for Pos [Int]
        arising from a use of ‘res’
      The matching instance is:
        instance [overlapping] [safe] Pos [Int]
          -- Defined at SafeLang10_B.hs:14:30
      It is compiled in a Safe module and as such can only
      overlap instances from the same module, however it
      overlaps the following instances from different modules:
        instance Pos [a] -- Defined at SafeLang10_A.hs:14:10
    • In the expression: res [(1 :: Int)]
      In an equation for ‘r’: r = res [(1 :: Int)]
      In the expression:
        do let r = res ...
           putStrLn $ "Result: " ++ show r
           putStrLn $ "Result: " ++ show function
